33번도 다시 풀기

--- a/week8/33.md
+++ b/week8/33.md
@@ -4,6 +4,320 @@
 
 ## Question Summary
 
+1h52m50s41
+
+오늘은 어쩐지 운수가 좋지가 않다. 32, 33번 둘다 테스트 케이스만 통과하고 그외의 경우는 통과가 안된다. 지금은 다른 사람들 푼거나 좀 보고 다음에 다시 풀어야겠다.
+
 ## My solution summary
 
+나는 bfs를 두번돌리는게 최선이었는데, 이렇게 하면 시간초과가난다.
+
 ## My code
+
+- bfs가 두번돌아서 시간초과가 나는 케이스이다.
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+using namespace std;
+
+vector<pair<int, int>> b;
+int r, c;
+char arr[1500][1501]; // 지도
+vector<vector<int>> visited(1500, vector<int> (1500, -1)); // 방문, 녹는 초 표시
+vector<vector<int>> route(1500, vector<int> (1500, 0)); // 방문, 녹는 초 표시
+int dx[4] = {-1, 0, 1, 0};
+int dy[4] = {0, 1, 0, -1};
+
+void bfs_x(int i, int j){
+    queue<tuple<int, int, int>> q;
+    q.push({i, j, 0}); // 0만큼 걸림
+
+    while(!q.empty()){
+        int x = get<0>(q.front());
+        int y = get<1>(q.front());
+        int dist = get<2>(q.front());
+        q.pop();
+
+        for(int i = 0; i < 4; i++){
+            int nx = x + dx[i];
+            int ny = y + dy[i];
+
+            if(nx < 0 || nx >= r || ny < 0 || ny >= c){
+                continue;
+            }
+
+            if(arr[nx][ny] == '.' && visited[nx][ny] == -1){
+                visited[nx][ny] = 0;
+                q.push({nx, ny, 0});
+                continue;
+            }
+
+            if(arr[nx][ny] == 'X'){
+                if(visited[nx][ny] == -1 || visited[nx][ny] > dist + 1){
+                    visited[nx][ny] = dist + 1;
+                    q.push({nx, ny, visited[nx][ny]});
+                }
+            }
+
+        }
+    }
+}
+
+
+int bfs_route(){
+    deque<tuple<int, int, int>> q; // i, j, 그리고 가는길에 있던 최댓값
+    q.push_back(make_tuple(b[0].first, b[0].second, 0));
+
+    while(!q.empty()){
+        int x = get<0>(q.front());
+        int y = get<1>(q.front());
+        int accMax = get<2>(q.front()); // 이때까지 지나오면서 만난 최댓갓
+        int curD = visited[x][y];
+        q.pop_front();
+
+        if(x == b[1].first && y == b[1].second){
+            return accMax;
+        }
+
+        for(int i = 0; i < 4; i++){
+            int nx = x + dx[i];
+            int ny = y + dy[i];
+
+            if(nx < 0 || nx >= r || ny < 0 || ny >= c || route[nx][ny]){
+                continue;
+            }
+
+            int nextD = visited[nx][ny]; // 지금 얼음 녹는 시점, 원래 0이었는데 얘는 1때 녹고 그런거 체크
+
+            if(nextD <= curD){
+                route[nx][ny] = 1;
+                q.push_front(make_tuple(nx, ny, accMax));
+            }else if(nextD > curD){
+                route[nx][ny] = 1;
+                q.push_back(make_tuple(nx, ny, nextD));
+            }
+        }
+    }
+
+    return 0;
+}
+
+
+
+int main() {
+    cin >> r >> c;
+
+    for(int i = 0; i < r; i++){
+        cin >> arr[i];
+        for(int j = 0; j < c; j++){
+            if(arr[i][j] == 'L'){
+                b.push_back({i, j});
+                arr[i][j] = '.';
+            }
+        }
+    }
+
+    // 각 구역에서 'X'의 각 좌표로 가는 거리를 구한다.
+    for(int i = 0; i < r; i++){
+        for(int j = 0; j < c; j++){
+            if(visited[i][j] == -1 && arr[i][j] == '.'){
+                visited[i][j] = 0;
+                bfs_x(i, j);
+            }
+        }
+    }
+
+    cout << bfs_route() << "\n";
+
+    return 0;
+}
+```
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+using namespace std;
+
+vector<pair<int, int>> b;
+int r, c;
+char arr[1500][1501]; // 지도
+vector<vector<int>> area(1500, vector<int> (1500, 0)); // 구역 표시
+vector<vector<int>> visited(1500, vector<int> (1500, -1)); // 방문, 녹는 초 표시
+vector<vector<int>> route(1500, vector<int> (1500, 0)); // 방문, 녹는 초 표시
+
+int dx[4] = {-1, 0, 1, 0};
+int dy[4] = {0, 1, 0, -1};
+
+//void bfs_area(int i, int j, int num){
+//    queue<pair<int, int>> q;
+//    q.push({i, j});
+//
+//    while(!q.empty()){
+//        int x = q.front().first;
+//        int y = q.front().second;
+//        q.pop();
+//
+//        for(int i = 0; i < 4; i++){
+//            int nx = x + dx[i];
+//            int ny = y + dy[i];
+//
+//            if(nx < 0 || nx >= r || ny < 0 || ny >= c || arr[nx][ny] == 'X' || area[nx][ny]){
+//                continue;
+//            }
+//
+//            area[nx][ny] = num;
+//            q.push({nx, ny});
+//        }
+//    }
+//}
+
+void bfs_x(int i, int j){
+    queue<tuple<int, int, int>> q;
+    q.push({i, j, 0}); // 0만큼 걸림
+
+    while(!q.empty()){
+        int x = get<0>(q.front());
+        int y = get<1>(q.front());
+        int dist = get<2>(q.front());
+        q.pop();
+
+        for(int i = 0; i < 4; i++){
+            int nx = x + dx[i];
+            int ny = y + dy[i];
+
+            if(nx < 0 || nx >= r || ny < 0 || ny >= c){
+                continue;
+            }
+
+            if(arr[nx][ny] == '.' && visited[nx][ny] == -1){
+                visited[nx][ny] = 0;
+                q.push({nx, ny, 0});
+                continue;
+            }
+
+            if(arr[nx][ny] == 'X'){
+                if(visited[nx][ny] == -1 || visited[nx][ny] > dist + 1){
+                    visited[nx][ny] = dist + 1;
+                    q.push({nx, ny, visited[nx][ny]});
+                }
+            }
+
+        }
+    }
+}
+
+
+int bfs_route(){
+    deque<tuple<int, int, int>> q; // i, j, 그리고 가는길에 있던 최댓값
+    q.push_back(make_tuple(b[0].first, b[0].second, 0));
+
+    while(!q.empty()){
+        int x = get<0>(q.front());
+        int y = get<1>(q.front());
+        int accMax = get<2>(q.front()); // 이때까지 지나오면서 만난 최댓갓
+        int curD = visited[x][y];
+        q.pop_front();
+
+        if(x == b[1].first && y == b[1].second){
+            return accMax;
+        }
+
+        for(int i = 0; i < 4; i++){
+            int nx = x + dx[i];
+            int ny = y + dy[i];
+
+            if(nx < 0 || nx >= r || ny < 0 || ny >= c || route[nx][ny]){
+                continue;
+            }
+
+            int nextD = visited[nx][ny]; // 지금 얼음 녹는 시점, 원래 0이었는데 얘는 1때 녹고 그런거 체크
+
+            if(nextD <= curD){
+                route[nx][ny] = 1;
+                q.push_front(make_tuple(nx, ny, accMax));
+            }else if(nextD > curD){
+                route[nx][ny] = 1;
+                q.push_back(make_tuple(nx, ny, nextD));
+            }
+        }
+    }
+
+
+    return 0;
+}
+
+
+
+int main() {
+    cin >> r >> c;
+
+    for(int i = 0; i < r; i++){
+        cin >> arr[i];
+        for(int j = 0; j < c; j++){
+            if(arr[i][j] == 'L'){
+                b.push_back({i, j});
+                arr[i][j] = '.';
+            }
+        }
+    }
+
+    // 구역 나누기, 각 .인데를 구역을 나눴다.
+//    int areaCount = 1;
+//    for(int i = 0; i < r; i++){
+//        for(int j = 0; j < c; j++){
+//            if(area[i][j] == 0 && arr[i][j] == '.'){
+//                area[i][j] = areaCount;
+//                bfs_area(i, j, areaCount++);
+//            }
+//        }
+//    }
+
+//    for(int i = 0; i < r; i++){
+//        for(int j = 0; j < c; j++){
+//            cout << area[i][j] << " ";
+//        }
+//        cout << "\n";
+//    }
+//
+//    cout << "\n";
+
+    // 각 구역에서 'X'의 각 좌표로 가는 거리를 구한다.
+    for(int i = 0; i < r; i++){
+        for(int j = 0; j < c; j++){
+            if(visited[i][j] == -1 && arr[i][j] == '.'){
+                visited[i][j] = 0;
+                bfs_x(i, j);
+            }
+        }
+    }
+
+//    for(int i = 0; i < r; i++){
+//        for(int j = 0; j < c; j++){
+//            if((b[0].first == i && b[0].second == j) || (b[1].first == i && b[1].second == j)){
+//                cout << 'L' << " ";
+//            }else{
+//                cout << visited[i][j] << " ";
+//            }
+//        }
+//        cout << "\n";
+//    }
+
+    cout << bfs_route() << "\n";
+
+
+    return 0;
+}
+```
