--- a/week8/32.md
+++ b/week8/32.md
@@ -11,6 +11,15 @@
 - 테스트 케이스?
   https://upload.acmicpc.net/2d62ed19-ea92-4a35-a016-11d02581e542/
 
+아무리봐도 이상하다 한 몇달뒤에 다시 풀어야겠다.
+
+```c++
+if(arr[nx][ny] & (1 << i)) {
+    // 해당 부분에 벽이 있는
+    continue;
+}
+```
+
 ## My code
 
 -망한 코드
