--- a/week8/33.md
+++ b/week8/33.md
@@ -12,6 +12,9 @@
 
 나는 bfs를 두번돌리는게 최선이었는데, 이렇게 하면 시간초과가난다.
 
+- bfs 두개를 동시에 돌리는게 맞다는데, 뭔가 잘못처리한거같다.
+  보니까, 물이 하루 녹고, 백조 검사하고, 그다음날 다시 검사하고 이런식으로 하는게 더 효율적인거같다.
+
 ## My code
 
 - bfs가 두번돌아서 시간초과가 나는 케이스이다.
