--- a/week8/34.md
+++ b/week8/34.md
@@ -4,6 +4,190 @@
 
 ## Question Summary
 
+52m44s19
+
 ## My solution summary
 
+풀긴했는데 대체 왜이렇게 더럽게 풀리는 것인지...
+
+string때매 난리를 쳤는데
+
+```c++
+array<string, 3>
+map<array<string, 3>, int> d;
+queue<array<string, 3>> q;
+```
+
+이런식으로도 사용가능하다.(array container)
+
+https://boycoding.tistory.com/213
+
+https://blockdmask.tistory.com/332
+
 ## My code
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+using namespace std;
+
+string start;
+map<string, int> visited;
+vector<string> abc;
+
+string toIndex(vector<string> abc){
+    for(int i = 0; i < 3; i++){
+        string cur = abc[i];
+        start += cur;
+        start += ",";
+    }
+
+    return start;
+}
+
+string toIndexEach(string a, string b, string c){
+    string cur = a;
+    cur  += ",";
+    cur  += b;
+    cur  += ",";
+    cur  += c;
+    cur  += ",";
+
+    return cur;
+}
+
+bool checkEach(string ch, char target){
+    for(int i = 0; i < ch.size(); i++){
+        if(target != ch[i]){
+            return false;
+        }
+    }
+
+    return true;
+}
+bool is_answer(string a, string b, string c){
+//    cout << "is_answer: " << a << "/" << b << "/" << c << "\n";
+
+    if(!checkEach(a, 'A')){
+        return false;
+    }
+
+    if(!checkEach(b, 'B')){
+        return false;
+    }
+
+    if(!checkEach(c, 'C')){
+        return false;
+    }
+
+    return true;
+}
+
+int bfs(){
+    queue<tuple<string, string, string, int>> q;
+    q.push(make_tuple(abc[0], abc[1], abc[2], 0));
+    visited[start] = 1;
+
+    while(!q.empty()){
+        string a = get<0>(q.front());
+        string b = get<1>(q.front());
+        string c = get<2>(q.front());
+        int step = get<3>(q.front()); // 첨에 0 한번 이동할때마다 1 증가
+        q.pop();
+//        cout << "--" << a << "/" << b << "/" << c << "\n";
+        if(is_answer(a, b, c)){
+            return step;
+        }
+
+        if(a.size() > 0){
+            // a의 원판을 이동하는 경우
+            char last = a.back();
+            string nextA = a.substr(0, a.size() - 1);
+
+            // b로 옮기는 경우
+            string AtoB = toIndexEach(nextA, b+last, c);
+            if(visited.count(AtoB) == 0){
+                visited[AtoB] = 1;
+                q.push(make_tuple(nextA, b+last, c, step+1));
+            }
+
+            // c로 옮기는 경우
+            string AtoC = toIndexEach(nextA, b, c+last);
+            if(visited.count(AtoC) == 0){
+                visited[AtoC] = 1;
+                q.push(make_tuple(nextA, b, c+last, step+1));
+            }
+        }
+
+        if(b.size() > 0){
+            // b의 원판을 이동하는 경우
+            char last = b.back();
+            string nextB = b.substr(0, b.size() - 1);
+
+            // A로 옮기는 경우
+            string BtoA = toIndexEach(a+last, nextB, c);
+            if(visited.count(BtoA) == 0){
+                visited[BtoA] = 1;
+                q.push(make_tuple(a+last, nextB, c, step+1));
+            }
+
+            // c로 옮기는 경우
+            string BtoC = toIndexEach(a, nextB, c+last);
+            if(visited.count(BtoC) == 0){
+                visited[BtoC] = 1;
+                q.push(make_tuple(a, nextB, c+last, step+1));
+            }
+        }
+
+        if(c.size() > 0){
+            // c의 원판을 이동하는 경우
+            char last = c.back();
+            string nextC = c.substr(0, c.size() - 1);
+
+            // A로 옮기는 경우
+            string CtoA = toIndexEach(a+last, b, nextC);
+            if(visited.count(CtoA) == 0){
+                visited[CtoA] = 1;
+                q.push(make_tuple(a+last, b, nextC, step+1));
+            }
+
+            // b로 옮기는 경우
+            string CtoB = toIndexEach(a, b+last, nextC);
+            if(visited.count(CtoB) == 0){
+                visited[CtoB] = 1;
+                q.push(make_tuple(a, b+last, nextC, step+1));
+            }
+        }
+    }
+
+
+    return 0;
+
+}
+
+int main() {
+
+
+    for(int i = 0; i < 3; i++){
+        int size; cin >> size;
+        string cur = "";
+        if(size > 0){
+            cin >> cur; // 앞에있는거부터 빼야한다, str pop_back, vector도 pop_back 가능
+        }
+        abc.push_back(cur);
+    }
+
+    start = toIndex(abc);
+//    cout << start << "\n";
+
+    cout << bfs() << "\n";
+
+    return 0;
+}
+```
