--- a/week8/35.md
+++ b/week8/35.md
@@ -4,6 +4,101 @@
 
 ## Question Summary
 
+55m14s46
+
 ## My solution summary
 
+`'\*', '+', '-', '/'`
+
+map<long long, pair<long long, char>> m; // ex m[1] = {어디서 왔는지, 현재 operation은 뭔지}
+
+이렇게했다.근데 연산 순서를 저거 순서대로 안해서 삽질을 했다. 하영아... 이제 정신차릴떄도 됬잖아. 지긋지긋해 아주.
+
 ## My code
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+using namespace std;
+
+map<long long, pair<long long, char>> m; // ex m[1] = {어디서 왔는지, 현재 operation은 뭔지}
+
+int startNum, endNum;
+
+string track(){
+    string answer = "";
+    long long next = endNum;
+
+    while(true){
+        if(m[next].first == -1){
+            break;
+        }
+
+        answer = m[next].second + answer;
+        next = m[next].first;
+    }
+
+    return answer;
+}
+
+int main() {
+    cin >> startNum >> endNum;
+
+    if(startNum == endNum){
+        cout << 0 << "\n";
+        return 0;
+    }
+
+    m[startNum] = make_pair(-1, '0');
+    queue<int> q;
+    q.push(startNum);
+
+    bool found = false;
+    while(!q.empty()){
+        long long cur = q.front();
+
+//        cout << cur << "\n";
+
+        q.pop();
+
+        if(cur == endNum){
+            found = true;
+            break;
+        }
+
+        if(cur * cur < 1000000001 && m.count(cur*cur) == 0){
+            m[cur*cur] = {cur, '*'};
+            q.push(cur*cur);
+        }
+
+        if(cur + cur < 1000000001 && m.count(cur+cur)== 0){
+            m[cur+cur] = {cur, '+'};
+            q.push(cur+cur);
+        }
+
+        if(cur - cur >= 0 && m.count(cur-cur) == 0){
+            m[cur-cur] = {cur, '-'};
+            q.push(cur-cur);
+        }
+
+        if(cur != 0 && cur / cur >= 0 && m.count(cur/cur) == 0){
+            m[cur/cur] = {cur, '/'};
+            q.push(cur/cur);
+        }
+    }
+
+    if(found){
+        string result = track();
+        cout << result << "\n";
+    }else{
+        cout << "-1" << "\n";
+    }
+    return 0;
+}
+```
