--- a/week9/36.md
+++ b/week9/36.md
@@ -4,6 +4,251 @@
 
 ## Question Summary
 
+30분 정도 풀어서 45프로대 정답률 맞는 코드를 짰는데, 30분 더 투자한다음 7프로가 되는 기적, 답을 찾아봤다.
+
 ## My solution summary
 
+풀이를 보면 거울이랑 문위치로 정점을 정해서 연결관계를 찾은 뒤에 풀고 있다.
+
 ## My code
+
+- 두가지 망한 버전
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+using namespace std;
+
+int n;
+char arr[51][51];
+bool d[51][51][150];
+
+vector<pair<int, int>> door;
+int startDirection; // 시작할때 방향
+int maxMirrorCount; // 최대 몇개 설치 되는지
+
+int dx[4] = {-1, 0, 1, 0};
+int dy[4] = { 0, 1, 0, -1};
+
+pair<int, int> get45(int curDirection){
+    if(curDirection == 0){
+        return {3, 1};
+    }else if(curDirection == 1){
+        return {0, 2};
+    }else if(curDirection == 2){
+        return {3, 1};
+    }else if(curDirection == 3){
+        return {0, 2};
+    }
+}
+
+void bfs() {
+    // x, y, 방향
+    queue<tuple<int, int, int, int>> q;
+    //    cout << startDirection << "\n";
+    q.push(make_tuple(door[0].first, door[0].second, startDirection, 0));
+    d[door[0].first][door[0].second][0] = 1;
+
+    while(!q.empty()){
+        int x = get<0>(q.front());
+        int y = get<1>(q.front());
+        int direction = get<2>(q.front());
+        int accuMirrorCount = get<3>(q.front());
+        q.pop();
+
+        // 해당 방향 대로 일단 이동
+        int nx = x + dx[direction];
+        int ny = y + dy[direction];
+        if(nx < 0 || nx >= n || ny < 0 || ny >= n || d[nx][ny][accuMirrorCount] || arr[nx][ny] == '*'){
+            continue;
+        }
+
+        if(arr[nx][ny] == '!'){
+            pair<int, int> turn = get45(direction);
+
+            d[nx][ny][accuMirrorCount + 1] = 1; // 여기서 거울 증가 시킴
+
+            q.push({nx, ny, turn.first, accuMirrorCount + 1});
+            q.push({nx, ny, turn.second, accuMirrorCount + 1});
+        }
+
+        // 그냥 가던대로 쭉가기
+        d[nx][ny][accuMirrorCount] = 1;
+        q.push(make_tuple(nx, ny, direction, accuMirrorCount));
+    }
+
+
+
+}
+
+int main() {
+    cin >> n;
+
+    for(int i = 0; i < n; i++){
+        cin >> arr[i];
+
+        for(int j = 0; j < n; j++) {
+            if (arr[i][j] == '#') {
+                door.push_back({i, j});
+
+                if(door.size() == 1){
+                    if(i == 0){
+                        startDirection = 2;
+                    }else if(i == n-1){
+                        startDirection = 0;
+                    }else if(j == 0){
+                        startDirection = 1;
+                    }else if(j == n-1){
+                        startDirection = 3;
+                    }
+                }
+
+            }else if(arr[i][j] == '!'){
+                maxMirrorCount++;
+            }
+        }
+    }
+
+    bfs();
+
+    for(int i = 0; i <= maxMirrorCount; i++){
+        if(d[door[1].first][door[1].second][i] == 1){
+            cout << i << "\n";
+            break;
+        }
+    }
+
+    return 0;
+}
+```
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <string.h>
+using namespace std;
+
+int n;
+char arr[51][51];
+int d[51][51][2]; // d[x][y][0] = 1 해당 위치 방문 했지만 거울은 설치 x, d[x][y][1] = 1 해당 위치 방문하고 거울 설치
+
+vector<pair<int, int>> door;
+int startDirection; // 시작할때 방향
+int maxMirrorCount; // 최대 몇개 설치 되는지
+
+int dx[4] = {-1, 0, 1, 0};
+int dy[4] = { 0, 1, 0, -1};
+
+pair<int, int> get45(int curDirection){
+    if(curDirection == 0){
+        return {3, 1};
+    }else if(curDirection == 1){
+        return {0, 2};
+    }else if(curDirection == 2){
+        return {3, 1};
+    }else if(curDirection == 3){
+        return {0, 2};
+    }
+}
+
+void bfs() {
+
+
+    // x, y, 방향, 누적 거울 깨기 갯수
+    queue<tuple<int, int, int, int>> q;
+    q.push(make_tuple(door[0].first, door[0].second, startDirection, 0));
+    d[door[0].first][door[0].second][0] = 0; // 해당 위치에 거울 설치 안하고 방문함
+
+    while(!q.empty()){
+        int x = get<0>(q.front());
+        int y = get<1>(q.front());
+        int direction = get<2>(q.front());
+        int accuMirrorCount = get<3>(q.front());
+        q.pop();
+
+//        cout << x << " " << y << " " << direction << " " << accuMirrorCount << "\n";
+
+        // 해당 방향 대로 일단 이동
+        int nx = x + dx[direction];
+        int ny = y + dy[direction];
+
+        if(nx < 0 || nx >= n || ny < 0 || ny >= n || arr[nx][ny] == '*'){
+            continue;
+        }
+
+        // . 일때
+        if((arr[nx][ny] == '.' || arr[nx][ny] == '#') && d[nx][ny][0] == -1){
+            // 해당 위치는 거울을 설치할 수 있는 곳인데, 거울 설치를 안한 적이 있는지 없는지
+            d[nx][ny][0] = accuMirrorCount;
+            q.push(make_tuple(nx, ny, direction, accuMirrorCount));
+        }
+
+        if(arr[nx][ny] == '!' && d[nx][ny][0] == -1){
+            // 해당 위치는 거울을 설치할 수 있는 곳인데, 거울 설치를 안한 적이 있는지 없는지
+            d[nx][ny][0] = accuMirrorCount;
+            q.push(make_tuple(nx, ny, direction, accuMirrorCount));
+        }
+
+        if(arr[nx][ny] == '!' && d[nx][ny][1] == -1){
+            // 해당 위치는 거울을 설치할 수 있는 곳인데, 거울 설치를 한적이 있는지 없는지
+            pair<int, int> turn = get45(direction);
+            d[nx][ny][1] = accuMirrorCount + 1;
+
+            q.push(make_tuple(nx, ny, turn.first, accuMirrorCount + 1));
+            q.push(make_tuple(nx, ny, turn.second, accuMirrorCount + 1));
+        }
+
+
+    }
+}
+
+int main() {
+    // 초기화
+    memset(d, -1, sizeof(d));
+
+    cin >> n;
+
+    for(int i = 0; i < n; i++){
+        cin >> arr[i];
+
+        for(int j = 0; j < n; j++) {
+            if (arr[i][j] == '#') {
+                door.push_back({i, j});
+
+                if(door.size() == 1){
+                    if(i == 0){
+                        startDirection = 2;
+                    }else if(i == n-1){
+                        startDirection = 0;
+                    }else if(j == 0){
+                        startDirection = 1;
+                    }else if(j == n-1){
+                        startDirection = 3;
+                    }
+                }
+
+            }else if(arr[i][j] == '!'){
+                maxMirrorCount++;
+            }
+        }
+    }
+
+    bfs();
+
+    cout << d[door[1].first][door[1].second][0] << "\n";
+
+    return 0;
+}
+```
