38번도 다시한번풀어보자

--- a/week9/38.md
+++ b/week9/38.md
@@ -4,6 +4,180 @@
 
 ## Question Summary
 
+43m40s49: 삽질한 시간
+
+이번주는 뭔가 잘 못푸네
+
 ## My solution summary
 
+- 처음엔 모르겠어서 그냥 풀리기라도 하라고 재귀호출로 모든 경우를 만들었다. 이렇게 했더니 testcase는 다 맞는데, 시간초과가 난다.
+
+- 시간초과의 늪에빠져서 40분 보다가 답봄
+
+- 답을 찾아보니까 d를 사용하는것까진 좋았는데 잘못쓴것같다. 어렵구만
+
 ## My code
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <string.h> // memset
+using namespace std;
+
+int t[1500001];
+int p[1500001];
+int n;
+long long maxNum;
+
+void recursive(int day, long long acc){
+    // 해당 날짜에 할지 말지
+    if(day >= n+1){
+        if(maxNum < acc){
+            maxNum = acc;
+        }
+
+        return;
+    }
+
+    if(day + t[day] <= n + 1){ // n일이면 n+1날짜 검사하라고 할때까진 포함해야한다
+        recursive(day + t[day], acc + p[day]);
+    }
+
+    recursive(day+1, acc);
+}
+
+int main() {
+    cin >> n;
+
+    for(int i = 1; i <= n; i++){
+        cin >> t[i] >> p[i];
+    }
+
+    recursive(1, 0); // 몇일차인지
+
+    cout << maxNum << "\n";
+
+    return 0;
+}
+```
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <string.h> // memset
+using namespace std;
+
+int t[1500001];
+int p[1500001];
+int n;
+long long maxNum;
+long long d[1500001]; // 해당 날짜까지의 최댓값
+
+void recursive(int day, long long acc){
+    // 해당 날짜에 할지 말지
+    cout << "여기 " << day << " " << acc << "\n";
+
+    // 마지막 날이 여러날이면 그냥 검사안함
+    if(t[n] != 1){
+        if(day >= n){
+            if(maxNum < acc){
+                maxNum = acc;
+            }
+            return;
+        }
+    }
+
+    // 마지막날이하루가 되면 7+1뭐 이럴때까지 검사를 하고
+    if(t[n] == 1){
+        if(day >= n + 1){
+            if(maxNum < acc){
+                maxNum = acc;
+            }
+            return;
+        }
+    }
+
+
+
+    if(day + t[day] - 1 <= n ){ // n일이면 n+1날짜 검사하라고 할때까진 포함해야한다
+        long long nextAcc = acc + p[day];
+        int nextDay = day + t[day];
+
+        cout << nextAcc << " " << nextDay << "\n";
+        if(d[nextDay-1] == 0 || d[nextDay-1] < nextAcc){
+//            cout << "next\n";
+            // 다음에 검사할날이 nextDay라면 1일에 3일 상담했다면 3일까지 누적 값비교하는 것
+            d[nextDay-1] = nextAcc;
+            recursive(day + t[day], acc + p[day]);
+        }
+
+        // 아니면 그냥 그 다음날 검사
+        recursive(day+1, acc);
+    }
+
+
+
+}
+
+int main() {
+    cin >> n;
+
+    for(int i = 1; i <= n; i++){
+        cin >> t[i] >> p[i];
+    }
+
+    recursive(1, 0); // 몇일차인지
+
+    cout << maxNum << "\n";
+
+    return 0;
+}
+```
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <string.h> // memset
+using namespace std;
+
+int t[1500001];
+int p[1500001];
+int n;
+long long d[1500001]; // 해당 날짜까지의 최댓값
+
+int main() {
+    cin >> n;
+
+    for(int i = 0; i < n; i++){
+        cin >> t[i] >> p[i];
+    }
+
+    for(int i = 0; i < n; i++){
+        // d[i]: i번째날에는 아직 상담을 안했고, 그앞에까지 했던것 최댓값
+        d[i + t[i]] = max(d[i+t[i]], d[i] + p[i]); // i번째날에 상담을해서 i+t[i]까지이미 구해진거랑, i번째날까지 상담했던거랑 새로운 돈 합친거 비교
+        d[i + 1] = max(d[i+1], d[i]); // i번째날까지 상담을 했던거랑, 그전날에 한거랑 비교
+    }
+
+    cout << d[n] << "\n";
+
+    return 0;
+}
+```
