39번도 다시풀기.. 이번주 전멸중...

--- a/week9/39.md
+++ b/week9/39.md
@@ -4,6 +4,50 @@
 
 ## Question Summary
 
+제기랄 되는게 없는 주인 것 같네...
+
+20분은 진자 고민해봤고, 20분은 멍하게 바라만봤는데 안되겠더라
+
 ## My solution summary
 
+- d[f][h]: 약통에 약이 1개짜리 f개 반개짜리 h개 있을때 약을 먹는 방법의 수
+- 반개 먹는경우 한개짜리 먹는 경우가 있으므로 `d[f][h] = d[f-1][h+1] + d[f][h-1]`, `d[f][0] = d[f-1][1]`, `d[0][h] = 1`
+
 ## My code
+
+- 답 찾아본거, 탑다운이네 바텀업이네 하지말고 일단 점화식 무조건 세우고 재귀호출로 함 풀어보는것도 좋을 것 같다.
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm> // max
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <string.h> // memset
+using namespace std;
+
+long long d[31][31];
+
+long long calc(int f, int h){
+    if(d[f][h] != -1) return d[f][h];
+    if(f == 0) return 1;
+    if(h == 0) return d[f][h] = calc(f-1, h+1);
+    return d[f][h] = calc(f-1, h+1) + calc(f, h-1);
+}
+
+int main() {
+    memset(d, -1, sizeof(d));
+
+    while(true){
+        int n;
+        cin >> n;
+        if(n==0) break;
+        cout << calc(n, 0) << "\n";
+    }
+
+    return 0;
+}
+```
