40번... DP가 어렵긴하다. 그냥 풀이나 많이 보자

--- a/week9/40.md
+++ b/week9/40.md
@@ -6,4 +6,60 @@ ABC: https://www.acmicpc.net/problem/12969
 
 ## My solution summary
 
+- dp 는 점화식을 찾는 문제. 당연히 내가 잘할리가 없다 고딩내내 수열만 주구장창 틀렸는데 갑자기 코테 친다고 잘될리가 없구먼. dp인것 같으면 일단 도망가는것이 상책
+- 못찾았음 점화식
+  `d[i][a][b][p]`: 길이가 i이고 A가 a개, B가 b개, s[i] < [j]가 p 개 있는 문자열이 가능한가
+
 ## My code
+
+이것도 망해서 다른 사람코드 그냥 따라쳤다.
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm> // max
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <string.h> // memset
+using namespace std;
+
+char ans[32];
+int n, k;
+bool d[31][31][31][436];
+
+int go(int i, int a, int b, int p){
+    if(i == n){
+        if(p==k) return true;
+        else return false;
+    }
+
+    if(d[i][a][b][p]) return false;
+    d[i][a][b][p] = true;
+
+    ans[i] = 'A';
+    if(go(i+1, a+1, b, p)) return true;
+
+    ans[i] = 'B';
+    if(go(i+1, a, b+1, p+a)) return true;
+
+    ans[i] = 'C';
+    if(go(i+1, a, b, p+a+b)) return true;
+
+    return false;
+}
+
+int main() {
+    cin >> n >> k;
+
+    if(go(0, 0, 0, 0)){
+        cout << ans << "\n";
+    }else{
+        cout << -1 << "\n";
+    }
+
+    return 0;
+}
+```
