41번도 털렸다...

--- a/week9/41.md
+++ b/week9/41.md
@@ -4,6 +4,190 @@
 
 ## Question Summary
 
+40분 정도 고민
+
 ## My solution summary
 
+```c++
+bool go(int index, int aAcc, int bAcc, int cAcc){
+    if(index == str.size()){
+        return true; // 끝까지 온거
+    }
+
+    // 이전에 해당 경우를 만든적이 있는지 없는지 체크하는 부분이 필요하다.
+
+    if(aAcc < a){
+        ans[index] = 'A';
+        if(go(index+1, aAcc+1, bAcc, cAcc)) return true;
+    }
+
+    if(bAcc < b && (index == 0 || (index > 0 && ans[index-1] != 'B'))){
+        ans[index] = 'B';
+        if(go(index+1, aAcc, bAcc+1, cAcc)) return true;
+    }
+
+    if(cAcc < c && (index == 0 || (index == 1 && ans[index-1] != 'C') || (index >=2 && ans[index-1] != 'C' && ans[index-2] != 'C'))){
+        ans[index] = 'C';
+        if(go(index+1, aAcc, bAcc, cAcc+1)) return true;
+    }
+
+    return false; // 다 돌았는데도 답이 하나도 없다.
+}
+```
+
+시간초과이다(예제만 다 맞음) 이제 뭔가 어찌됬든 코드는 만들어내는데, 이거 경우를 체크하는 부분, 점화식 뭐 그런거 못세우겠더라.
+
+- `d[a][b][c][p1][p2]`: a, b, c의 갯수가 (a, b, c)개이고, 전날 일한 사람이 p1, 그 전날 일한 사람이 p2 인것이 가능한가?
+
+응용했는데도 잘 안풀어졌다. 다음에 다시 풀어봐야겠다. 이번주 문제들은 아주 범상치않다.
+
 ## My code
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm> // max
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <string.h> // memset
+using namespace std;
+
+int a, b, c;
+string str;
+char ans[51];
+
+bool go(int index, int aAcc, int bAcc, int cAcc){
+    if(index == str.size()){
+        return true; // 끝까지 온거
+    }
+
+    // 이전에 해당 경우를 만든적이 있는지 없는지 체크하는 부분이 필요하다.
+
+    if(aAcc < a){
+        ans[index] = 'A';
+        if(go(index+1, aAcc+1, bAcc, cAcc)) return true;
+    }
+
+    if(bAcc < b && (index == 0 || (index > 0 && ans[index-1] != 'B'))){
+        ans[index] = 'B';
+        if(go(index+1, aAcc, bAcc+1, cAcc)) return true;
+    }
+
+    if(cAcc < c && (index == 0 || (index == 1 && ans[index-1] != 'C') || (index >=2 && ans[index-1] != 'C' && ans[index-2] != 'C'))){
+        ans[index] = 'C';
+        if(go(index+1, aAcc, bAcc, cAcc+1)) return true;
+    }
+
+    return false; // 다 돌았는데도 답이 하나도 없다.
+}
+int main() {
+    cin >> str;
+    for(int i = 0; i < str.size(); i++){
+        if(str[i] == 'A'){
+            a++;
+        }else if(str[i] == 'B'){
+            b++;
+        }else if(str[i] == 'C'){
+            c++;
+        }
+    }
+
+    // index 0에 생성할거고, 지금은 a 0개, b 0개 썼다
+    if(go(0, 0, 0, 0)){
+        cout << ans << "\n";
+    }else{
+        cout << "-1\n";
+    }
+
+
+    return 0;
+}
+```
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm> // max
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <string.h> // memset
+using namespace std;
+
+int a, b, c;
+string str;
+char ans[51];
+int d[51][51][51][4][4];
+
+// `d[a][b][c][p1][p2]`: a, b, c의 갯수가 (a, b, c)개이고, 전전날 일한 사람이 p1, 전날 일한 사람이 p2 인것이 가능한가? 0: 없는거, 1: A, 2: B, 3: C
+bool go(int aAcc, int bAcc, int cAcc, int p1, int p2){
+    int index = aAcc + bAcc + cAcc;
+
+    if(index == str.size()){
+        return true; // 끝까지 온거
+    }
+
+    // 이전에 해당 경우를 만든적이 있는지 없는지 체크하는 부분이 필요하다.
+    if(d[aAcc][bAcc][cAcc][p1][p2]) return true;
+//    d[aAcc][bAcc][cAcc][p1][p2] = true;
+
+    if(aAcc < a){
+        ans[index] = 'A';
+        if(go(aAcc+1, bAcc, cAcc, p2, 1)) {
+            d[aAcc+1][bAcc][cAcc][p2][1] = true;
+            return true;
+        }
+    }
+
+    if(bAcc < b && p2 != 2){
+        ans[index] = 'B';
+        if(go(aAcc, bAcc+1, cAcc, p2, 2)) {
+            d[aAcc][bAcc+1][cAcc][p2][2] = true;
+            return true;
+        }
+    }
+
+    if(cAcc < c && p1 != 3 && p2 != 3){
+        ans[index] = 'C';
+        if(go(aAcc, bAcc, cAcc+1, p2, 3)) {
+            d[aAcc][bAcc][cAcc+1][p2][3] = true;
+            return true;
+        }
+    }
+
+    return false; // 다 돌았는데도 답이 하나도 없다.
+}
+int main() {
+    cin >> str;
+
+    for(int i = 0; i < str.size(); i++){
+        if(str[i] == 'A'){
+            a++;
+        }else if(str[i] == 'B'){
+            b++;
+        }else if(str[i] == 'C'){
+            c++;
+        }
+    }
+
+    bool result = go(0, 0, 0, 0, 0);
+
+    if(result){
+        cout << ans << "\n";
+
+//        for(int i = 0; i < 10; i++){
+//            cout << ans[i] << "\n";
+//        }
+    }else{
+        cout << "-1\n";
+    }
+
+
+    return 0;
+}
+```
