--- a/week9/42.md
+++ b/week9/42.md
@@ -1,9 +1,94 @@
 # Link to Question
 
-뮤탈리스크: https://www.acmicpc.net/problem/14238
+뮤탈리스크: https://www.acmicpc.net/problem/12869
 
 ## Question Summary
 
+51m47s25
+
 ## My solution summary
 
+오랜만에 풀어서 이상하다. 다이나믹 프로그래밍을 너무 깊게 생각하지 말아야겠다.
+
+`int visited[61][61][61];` 나는 이렇게 한 부분을 d[i][j][k] : i, j, k 체력에 도달하기 위한 최솟값이렇게 생각하는거라고 한다. 그냥하던대로 bfs하면 되는건데,괜히 다이나믹이네 하면서 머리 복잡해지면 못푸는것같다.
+
 ## My code
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm> // max
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <string.h> // memset
+using namespace std;
+
+int n;
+vector<int> scv(3, 0);
+vector<int> nextScv(3, 0);
+int damage[3] = {-9, -3, -1};
+int visited[61][61][61];
+
+
+int bfs(){
+    queue<vector<int>> q;
+    q.push(scv);
+    visited[scv[0]][scv[1]][scv[2]] = 1; // 시작점 방문, scv가 음수인건 다 0으로 만든다.
+
+    while(!q.empty()){
+        vector<int> cur = q.front();
+        int depth = visited[cur[0]][cur[1]][cur[2]];
+        q.pop();
+
+        if(cur[0] <= 0 && cur[1] <= 0 && cur[2] <= 0){
+            return visited[0][0][0] - 1;
+        }
+
+         // index를 기록
+        vector<int> notZero;
+        for(int i = 0; i < cur.size(); i++){
+            if(cur[i] > 0){
+                notZero.push_back(i);
+            }
+        }
+
+        do{
+            nextScv[0] = cur[0];
+            nextScv[1] = cur[1];
+            nextScv[2] = cur[2];
+
+            for(int i = 0; i < notZero.size(); i++){
+                nextScv[notZero[i]] += damage[i];
+                if(nextScv[notZero[i]] <= 0){
+                    nextScv[notZero[i]] = 0;
+                }
+            }
+
+            if(visited[nextScv[0]][nextScv[1]][nextScv[2]] == 0){
+                visited[nextScv[0]][nextScv[1]][nextScv[2]] = depth + 1;
+                q.push(nextScv);
+            }
+        }while(next_permutation(notZero.begin(), notZero.end()));
+    }
+
+    return -1;
+}
+int main() {
+    cin >> n;
+
+    for(int i = 0; i < n; i++){
+        cin >> scv[i];
+    }
+
+    for(int i = n; i < 3; i++){
+        scv[i] = 0;
+    }
+
+    cout << bfs() << "\n";
+
+    return 0;
+}
+```
