43번 풀이, 오랜만에 또 하나 더 맞아서 기분이 좋다

--- a/week9/43.md
+++ b/week9/43.md
@@ -4,6 +4,108 @@ Acka: https://www.acmicpc.net/problem/12996
 
 ## Question Summary
 
+35m53s33 까지 풀긴했는데 묘하다. 맞았다는 사실까지 믿을 수 없다.
+
 ## My solution summary
 
+내가 세운 점화식은 `long long d[51][51][51][51];` 을 이용해서
+d[i][a][b][c]는 i번째 곡까지에서 a, b, c, 가 부른곡의 갯수이다
+
+d[0][0][0][0]에서 부터 하나하나 다 구했다.
+
+```c++
+for(int a = 0; a <= song[0]; a++){
+    for(int b = 0; b <= song[1]; b++){
+        for(int c = 0; c <= song[2]; c++){
+            for(int i = 0; i < s; i++){
+                d[i][a][b][c] = d[i][a][b][c] % ddd;
+                d[i+1][a+1][b][c] += d[i][a][b][c];
+                d[i+1][a][b+1][c] += d[i][a][b][c];
+                d[i+1][a][b][c+1] += d[i][a][b][c];
+                d[i+1][a+1][b+1][c] += d[i][a][b][c];
+                d[i+1][a+1][b][c+1] += d[i][a][b][c];
+                d[i+1][a][b+1][c+1] += d[i][a][b][c];
+                d[i+1][a+1][b+1][c+1] += d[i][a][b][c];
+//                    d[i+1][a+1][b][c] += nextValue;
+//                    d[i+1][a][b+1][c] += nextValue;
+//                    d[i+1][a][b][c+1] += nextValue;
+//                    d[i+1][a+1][b+1][c] += nextValue;
+//                    d[i+1][a+1][b][c+1] += nextValue;
+//                    d[i+1][a][b+1][c+1] += nextValue;
+//                    d[i+1][a+1][b+1][c+1] += nextValue;
+            }
+        }
+    }
+}
+```
+
+이렇게 한 이유는 모든 경우를 처음부터 다 구하는건데, d[i][a][b][c] 경우로 부터 만들수 있는건 7가지이다.
+d[i+1][new_a][new_b][new_c] 에는 d[i][a][b][c]까지 만든 경우의 수를 더해주면된다. 왜냐하면 누적한경우의 수에다가 경우하나를 추가하는 것이기 떄문이다. 여기에 해당할 수 있는 다른 경로에도 여기다가 경우를 추가해서 기록을 할거다. 결국엔 여기에 해당하는 모든애들이 여기다가 값을 추가할거다.
+
+말이 이상한데, 0개의 곡을 a,b, c가 각각 (0, 0, 0)부른데부터 시작한다. 얘도 경우의 수는 1이다.
+루프를돌때 처음 얘에서 시작하는데, 여기서 뻗어가는 가지의 수는 총 7개이고 얘로부터 만들어낼수 있는경우에는 모두 1을 더해준다(d[0][0][0][0] 이 1이다)
+다음에는 d[1][0][0][0]을 조회하는데, 얘는 없기때문 다 0만 더하다 끝난다.
+
+d[1][1][0][0] 경우 이전에 1이라는 값이 더해져있고, 얘로부터 만들수 있는 경우를 7가지 만들고 거기다가 경우를 추가해준다.
+
+....
+
+가지치기하듯이 다 더해주는거다.
+
 ## My code
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm> // max
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <string.h> // memset
+using namespace std;
+
+int ddd =  1000000007;
+int s; // 총 노래 갯수
+vector<int> song(3, 0); // 각각이 불러야 하는 갯수
+int answer = 0;
+long long d[51][51][51][51];
+
+int main() {
+    cin >> s;
+    for(int i = 0; i < 3; i++){
+        cin >> song[i];
+    }
+
+    d[0][0][0][0] = 1;
+
+
+    for(int a = 0; a <= song[0]; a++){
+        for(int b = 0; b <= song[1]; b++){
+            for(int c = 0; c <= song[2]; c++){
+                for(int i = 0; i < s; i++){
+                    d[i][a][b][c] = d[i][a][b][c] % ddd;
+                    d[i+1][a+1][b][c] += d[i][a][b][c];
+                    d[i+1][a][b+1][c] += d[i][a][b][c];
+                    d[i+1][a][b][c+1] += d[i][a][b][c];
+                    d[i+1][a+1][b+1][c] += d[i][a][b][c];
+                    d[i+1][a+1][b][c+1] += d[i][a][b][c];
+                    d[i+1][a][b+1][c+1] += d[i][a][b][c];
+                    d[i+1][a+1][b+1][c+1] += d[i][a][b][c];
+//                    d[i+1][a+1][b][c] += nextValue;
+//                    d[i+1][a][b+1][c] += nextValue;
+//                    d[i+1][a][b][c+1] += nextValue;
+//                    d[i+1][a+1][b+1][c] += nextValue;
+//                    d[i+1][a+1][b][c+1] += nextValue;
+//                    d[i+1][a][b+1][c+1] += nextValue;
+//                    d[i+1][a+1][b+1][c+1] += nextValue;
+                }
+            }
+        }
+    }
+
+    cout << d[s][song[0]][song[1]][song[2]] % ddd << "\n";
+    return 0;
+}
+```
