다시 풀것 모아둔 주, 44번은 8번 문제를 다시 푼건데, 실패함

--- a/week10/44.md
+++ b/week10/44.md
@@ -6,6 +6,247 @@
 
 ## Question Summary
 
+1h41m18s97
+
 ## My solution summary
 
+또 안된다. 다시 풀기. 큰틀은 잡아지는데 문제가 좀 복잡하긴 한것 같다. 좀 지랄이랄까? 그래도 큰틀은 잡았단것에 의의를 두고 그냥 이문제는 버리겠다.
+
 ## My code
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm> // max
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <string.h> // memset
+using namespace std;
+
+int r, c;
+char arr[100][100];
+int n;
+int th[100]; // throw 방향
+
+int dx[4] = {1, 0, 0, -1};
+int dy[4] = {0, 1, -1, 0};
+
+int visited[100][100];
+int lowArr[100]; // 해당 열에서 가장 낮은 높이
+
+int findLowest(int row, int i){
+//    cout << "findLowest " << row << " " << i << "\n";
+    int lowest = row;
+    memset(visited, 0, sizeof(visited));
+    memset(lowArr, -1, sizeof(lowArr)); // -1
+
+    queue<pair<int, int>> q;
+    q.push({row, i});
+    lowArr[i] = row;
+
+    while(!q.empty()){
+        int x = q.front().first;
+        int y = q.front().second;
+        q.pop();
+
+        for(int i = 0; i < 4; i++){
+            int nx = x + dx[i];
+            int ny = y + dy[i];
+            if(nx < 0 || nx >= r || ny < 0 || ny >= c || visited[nx][ny] == 1 || arr[nx][ny] == '.'){
+                continue;
+            }
+
+            if(nx < lowest){
+                lowest = nx;
+            }
+            visited[nx][ny] = 1;
+
+            if(lowArr[ny] == -1 || lowArr[ny] > nx){
+                lowArr[ny] = nx; // 가장 낮은 높이
+            }
+
+            q.push({nx, ny});
+        }
+    }
+
+    return lowest;
+}
+
+int calcMoveIndex(){
+    int height = 100;
+
+    for(int i = 0; i < c; i++){
+        if(lowArr[i] == -1){
+//            cout << "-1 " << i << "\n";
+            continue;
+        }
+//        else{
+//            cout << lowArr[i] << "\n";
+//        }
+
+        for(int j = 0; j < lowArr[i]; j++){
+            if(arr[j][i] == '.'){
+                if(lowArr[i] - j < height){
+//                    cout << lowArr[i] << " " << j;
+                    height = lowArr[i] - j; // 여기까지 내려와라
+                }
+//                break;
+            }
+        }
+    }
+//    cout << height << "\n";
+    return height;
+}
+void move(int row, int i, int lowest){
+    queue<pair<int, int>> q;
+    q.push({row, i});
+    visited[row][i] = 3;
+    arr[row][i] = '.';
+
+    while(!q.empty()){
+        int x = q.front().first;
+        int y = q.front().second;
+        q.pop();
+
+        for(int i = 0; i < 4; i++){
+            int nx = x + dx[i];
+            int ny = y + dy[i];
+            if(nx < 0 || nx >= r || ny < 0 || ny >= c || visited[nx][ny] == 0 || visited[nx][ny] == 3){
+                continue;
+            }
+
+            visited[nx][ny] = 3;
+            arr[nx][ny] = '.';
+            q.push({nx, ny});
+        }
+    }
+
+    q.push({row, i});
+    visited[row][i] = 0;
+    arr[row-lowest][i] = 'x';
+
+    while(!q.empty()){
+        int x = q.front().first;
+        int y = q.front().second;
+        q.pop();
+
+        for(int i = 0; i < 4; i++){
+            int nx = x + dx[i];
+            int ny = y + dy[i];
+            if(nx < 0 || nx >= r || ny < 0 || ny >= c || visited[nx][ny] == 0){
+                continue;
+            }
+
+            visited[nx][ny] = 0;
+            arr[nx-lowest][ny] = 'x';
+            q.push({nx, ny});
+        }
+    }
+}
+void clearMineral(int row, int next){
+    int i = next > 0 ? 0 : c-1;
+
+    while(true){
+        if(i > c || i < 0){
+            break;
+        }
+
+        if(arr[row][i] == 'x'){
+            arr[row][i] = '.';
+            int lowest = 0;
+
+            if(row + 1 < r && arr[row+1][i] == 'x'){
+                lowest = findLowest(row + 1, i); // 여기서부터 클러스터를 찾았을때 가장 낮은 부분의 높이
+
+                if(lowest > 0){
+                    // 모든 포인트를 lowest만큼 빼준다.
+                    int moveIndex = calcMoveIndex();
+//                    cout << "+++++++" << moveIndex << "\n";
+                    move(row + 1, i, moveIndex);
+                }
+            }
+//            else if(row - 1 >= 0 && arr[row-1][i] == 'x'){
+//                lowest = findLowest(row - 1, i); // 여기서부터 클러스터를 찾았을때 가장 낮은 부분의 높이
+////                cout << "here " << "\n";
+//                if(lowest > 0){
+//                    // 모든 포인트를 lowest만큼 빼준다.
+//                    int moveIndex = calcMoveIndex();
+//                    move(row - 1, i, moveIndex);
+//                }
+//            }
+            else if((i+next < c && i+next >= 0) && arr[row][i+next] == 'x'){
+                // 오른쪽으로 날아가는중
+                lowest = findLowest(row, i+next); // 여기서부터 클러스터를 찾았을때 가장 낮은 부분의 높이
+                if(lowest > 0){
+                    // 모든 포인트를 lowest만큼 빼준다.
+                    int moveIndex = calcMoveIndex();
+
+                    move(row, i+next, moveIndex);
+                }
+            }
+
+            break;
+        }
+
+        i += next;
+    }
+
+}
+
+void printArr(){
+    for(int i = r-1; i >= 0; i--){
+        for(int j = 0; j < c; j++){
+            cout << arr[i][j];
+        }
+        cout << "\n";
+    }
+}
+
+int main() {
+    cin >> r >> c;
+
+    for(int i = r-1; i >= 0; i--){
+        for(int j = 0; j < c; j++){
+            cin >> arr[i][j];
+        }
+    }
+
+    cin >> n;
+    for(int i = 0; i < n; i++){
+        cin >> th[i];
+        th[i]--; // 6이면 5번째줄꺼 깨야함
+
+        cout << i << "\n";
+        clearMineral(th[i], i % 2 == 0 ? 1: -1);
+        printArr();
+        cout << "\n";
+    }
+
+    printArr();
+
+    return 0;
+}
+
+
+
+
+//#include <iostream>
+//#include <vector>
+//#include <algorithm> // max
+//#include <queue>
+//#include <map>
+//#include <tuple>
+//#include <deque>
+//#include <string>
+//#include <string.h> // memset
+//using namespace std;
+//
+//int main() {
+//
+//
+//    return 0;
+//}
+```
