--- a/week10/45.md
+++ b/week10/45.md
@@ -6,6 +6,97 @@
 
 ## Question Summary
 
+대략 두시간
+
 ## My solution summary
 
+index를 조작하는게 너무 어렵다. 근데 좀만 더 여기서 손보면 해결 가능할것 같다. 지금은 시간초과가 나오는데, 범위의 값을 미리 누적해서 구해두면 될것 같다. 하지만 머리가 아파서 더는 못하겠다.
+
 ## My code
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm> // max
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <string.h> // memset
+using namespace std;
+
+int arr[401][401];
+
+int main() {
+    int caseNum = 1;
+    while(true){
+        int lineCount; cin >>  lineCount;
+        if(lineCount == 0){
+            break;
+        }
+
+        for(int i = 0; i < lineCount; i++){
+            for(int j = 0; j < 2 * i + 1; j++){
+                cin >> arr[i][j];
+            }
+        }
+
+        int maxResult = 0;
+        // 부분 삼각형 처리하기
+        // 정상 방향
+        for(int i = 0; i < lineCount; i++){
+            for(int j = 0; j < 2 * i + 1; j += 2){
+                int sum = 0; // 초기값
+
+                for(int n = 1; n <= lineCount - i; n++){
+                    // 더커지기
+                    int eachLine = 0;
+                    for(int k = j; k < j+(n*2-1); k++){
+                        eachLine += arr[i+n-1][k];
+                    }
+
+                    sum += eachLine;
+
+                    if(sum > maxResult) {
+                        maxResult = sum;
+                    }
+                }
+            }
+        }
+
+        // 반대 방향
+        for(int i = lineCount-1; i >= 0; i--){
+            for(int j = 1; j < 2 * i + 1; j += 2){
+                int sum = 0; // 초기값
+
+                for(int n = 1; n <= lineCount; n++){
+                    if(j - (n*2-1) + 1 < 0 || j > (i - (n-1)) * 2){
+                        break;
+                    }
+//                    cout << i-n+1 << " " << j - (n*2-1) + 1 << " " << j << "\n";
+
+                    int eachLine = 0;
+
+                    for(int k = j - (n*2-1) + 1; k <= j; k++){
+                        eachLine += arr[i-n+1][k];
+                    }
+
+                    sum += eachLine;
+//                    cout << "sum " << sum << "\n";
+
+                    if(sum > maxResult) {
+                        maxResult = sum;
+                    }
+
+                }
+            }
+        }
+
+
+        cout << caseNum++ << ". " << maxResult << "\n";
+    }
+
+    return 0;
+}
+```
