--- a/week10/46.md
+++ b/week10/46.md
@@ -8,4 +8,92 @@
 
 ## My solution summary
 
+진짜 식겁하게 어렵네 1시간 더 써도 머리 뽀개질거같아서 포기한다.
+
+다시 답을 봤는데 좌표를 일단 써야한다.
+
+```
+(1, 1) (1, 2) (1, 3) (1, 4)
+    (2, 1) (2, 2) (2, 3)
+(3, 1) (3, 2) (3, 3) (3, 4)
+    (4, 1) (4, 2) (4, 3)
+(5, 1) (5, 2) (5, 3) (5, 4)
+```
+
+한개의 좌표가 6가지 방향으로이동이 가능하다
+
 ## My code
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm> // max
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <string.h> // memset
+using namespace std;
+
+int n;
+pair<int, pair<int, int>> arr[500][500]; //블럭 번호
+pair<int, int> from[500][500]; //어떤 블록에서부터 왔는지 좌표 기록,
+int visited[500][500];
+// 값이 기재 되어있으면 방문 한 것
+
+//pair<int, int>  visited[500][500];
+
+void bfs(){
+    queue<pair<int, int>> q;
+    q.push({0, 0});
+
+    while(!q.empty()){
+        int x = q.front().first;
+        int y = q.front().second;
+        q.pop();
+
+        bool isEven = (x % 2 == 0);
+
+//        if(isEven){
+//            // 오른쪽 블럭
+//            if(y < n - 1 && visited[x][y+1] == 0 && arr[x][y].second.second == arr[x][y+1].second.first){
+//                visited[x][y+1] = 1;
+//                q.push({x, y+1});
+//            }
+//            // 왼쪽 블럭
+//            if(y > 0 &&visited[x][y-1] == 0 && arr[x][y].second.first == arr[x][y-1].second.second){
+//                visited[x][y-1] = 1;
+//                q.push({x, y-1});
+//            }
+//            // 오른쪽 블럭이랑 같은 경우
+//            if((x+1 < n && y-1 > 0) && visited[x+1][y] == 0 && arr[x][y].second.first == arr[x][y-1].second.second){
+//
+//            }
+//        }
+    }
+}
+
+int main() {
+    cin >> n;
+    int blockNum = 1;
+    for(int i = 0; i < n; i++){
+        int count;
+        if(i % 2 == 0){
+            count = n;
+        }else{
+            count = n-1;
+        }
+
+        for(int j = 0; j < count; j++){
+            arr[i][j].first = blockNum++;
+            cin >> arr[i][j].second.first >> arr[i][j].second.second;
+        }
+    }
+
+    bfs();
+
+    return 0;
+}
+
+```
