47번(32번 다시 풀기) 성공

--- a/week10/47.md
+++ b/week10/47.md
@@ -6,6 +6,225 @@
 
 ## Question Summary
 
+49m13s72
+
 ## My solution summary
 
+다시 풀어서 맞았다~~!!
+
+- `isWall`이라는 함수로 어떤 방향이 어떤 값일때 벽인지 아닌지를 체크하는 함수를 뒀다.
+- `bfs`하면 방사이즈랑 다 나오는데 `sizeList`라는 배열을 또 둬서 여기다가는 각 방의 크기를 해당하는 위치에다가 다 기록했다. `track`을 써서
+- 벽을 부수는건 그냥 모든 벽을 다 부숴 보기로 했다.
+
+```c++
+int conRoomSize = 0;
+for(int i = 0; i < m; i++){
+    for(int j = 0; j < n; j++){
+        int roomSize = connect(i, j);
+        if(conRoomSize < roomSize){
+            conRoomSize = roomSize;
+        }
+    }
+}
+```
+
+이렇게 해서 더크게 나오면 답이었다.
+
+- `connect`는 해당 방향이 벽인지 체크하고 부숴보고 서로 다른 방이었으면 `sizeList`의 값을 이용해서 더해가지고 룸 사이즈 두개를 구하는 것
+
+```c++
+
+int connect(int x, int y){
+    int result = 0;
+    if(isWall(arr[x][y], 0) && y-1 >= 0 && visited[x][y] != visited[x][y-1]){
+        // 왼쪽
+        result = sizeList[x][y] + sizeList[x][y-1];
+    }
+
+    if(isWall(arr[x][y], 1) && x-1 >= 0 && visited[x][y] != visited[x-1][y]){
+        // 위쪽
+        if(result < sizeList[x][y] + sizeList[x-1][y]){
+            result = sizeList[x][y] + sizeList[x-1][y];
+        }
+    }
+
+    if(isWall(arr[x][y], 2) && y+1 < n && visited[x][y] != visited[x][y+1]){
+        // 오른쪽
+        if(result < sizeList[x][y] + sizeList[x][y+1]){
+            result = sizeList[x][y] + sizeList[x][y+1];
+        }
+    }
+
+    if(isWall(arr[x][y], 3) && x+1 < m && visited[x][y] != visited[x+1][y]){
+        // 아래쪽
+        if(result < sizeList[x][y] + sizeList[x+1][y]){
+            result = sizeList[x][y] + sizeList[x+1][y];
+        }
+    }
+
+    return result;
+}
+```
+
+보람차다.
+
 ## My code
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm> // max
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <string.h> // memset
+using namespace std;
+
+int dx[4] = {0, -1, 0, 1};
+int dy[4] = { -1, 0, 1, 0};
+int arr[51][51];
+int visited[51][51];
+int sizeList[51][51];
+int n, m;
+
+bool isWall(int num, int dire){
+    // 숫자 기준으로 어느 방향인지 알려줌
+    int check;
+    if(dire == 0){
+        check = 1;
+    }else if(dire == 1){
+        check = 2;
+    }else if(dire == 2){
+        check = 4;
+    }else {
+        check = 8;
+    }
+
+    if(num & check){
+        return true; // true면 벽이다
+    }else{
+        return false;
+    }
+}
+
+
+int bfs(int sx, int sy, int roomCount){
+    queue<pair<int, int>> q;
+    q.push({sx, sy});
+    visited[sx][sy] = roomCount;
+    int roomSize = 0;
+    vector<pair<int, int>> track;
+
+    while(!q.empty()){
+        int x = q.front().first;
+        int y = q.front().second;
+        track.push_back({x, y});
+        q.pop();
+        roomSize++;
+
+        for(int i = 0; i < 4; i++){
+            int nx = x + dx[i];
+            int ny = y + dy[i];
+
+            if(nx < 0 || nx >= m || ny < 0 || ny >= n || isWall(arr[x][y], i) || visited[nx][ny]){
+                continue;
+            }
+
+            q.push({nx, ny});
+            visited[nx][ny] = roomCount;
+        }
+    }
+
+    for(int i = 0; i < track.size(); i++){
+        sizeList[track[i].first][track[i].second] = roomSize;
+    }
+
+    return roomSize;
+}
+
+int connect(int x, int y){
+    int result = 0;
+    if(isWall(arr[x][y], 0) && y-1 >= 0 && visited[x][y] != visited[x][y-1]){
+        // 왼쪽
+        result = sizeList[x][y] + sizeList[x][y-1];
+    }
+
+    if(isWall(arr[x][y], 1) && x-1 >= 0 && visited[x][y] != visited[x-1][y]){
+        // 위쪽
+        if(result < sizeList[x][y] + sizeList[x-1][y]){
+            result = sizeList[x][y] + sizeList[x-1][y];
+        }
+    }
+
+    if(isWall(arr[x][y], 2) && y+1 < n && visited[x][y] != visited[x][y+1]){
+        // 오른쪽
+        if(result < sizeList[x][y] + sizeList[x][y+1]){
+            result = sizeList[x][y] + sizeList[x][y+1];
+        }
+    }
+
+    if(isWall(arr[x][y], 3) && x+1 < m && visited[x][y] != visited[x+1][y]){
+        // 아래쪽
+        if(result < sizeList[x][y] + sizeList[x+1][y]){
+            result = sizeList[x][y] + sizeList[x+1][y];
+        }
+    }
+
+    return result;
+}
+
+void printArr(){
+    for(int i = 0; i < m; i++){
+        for(int j = 0; j < n; j++){
+            cout << sizeList[i][j] << " ";
+        }
+        cout << "\n";
+    }
+}
+
+int main() {
+    cin >> n >> m; // m 세로, n 가로
+
+    for(int i = 0; i < m; i++){
+        for(int j = 0; j < n; j++){
+            cin >> arr[i][j];
+        }
+    }
+
+    int maxRoomSize = 0;
+    int roomCount = 0;
+    for(int i = 0; i < m; i++){
+        for(int j = 0; j < n; j++){
+            if(visited[i][j] == 0){
+                roomCount++;
+                int roomSize = bfs(i, j, roomCount);
+                if(roomSize > maxRoomSize){
+                    maxRoomSize = roomSize;
+                }
+            }
+        }
+    }
+
+    cout << roomCount << "\n";
+    cout << maxRoomSize << "\n";
+
+
+    int conRoomSize = 0;
+    for(int i = 0; i < m; i++){
+        for(int j = 0; j < n; j++){
+            int roomSize = connect(i, j);
+            if(conRoomSize < roomSize){
+                conRoomSize = roomSize;
+            }
+        }
+    }
+
+//    printArr();
+
+    cout << conRoomSize << "\n";
+
+    return 0;
+}
+```
