--- a/week10/48.md
+++ b/week10/48.md
@@ -6,6 +6,147 @@
 
 ## Question Summary
 
+1h04m10s09
+
 ## My solution summary
 
+이건또 아무리 풀어도 시간초과다. 이렇게까지 어려운거 나오면 그냥 포기하자.
+
+다시 풀이를 봤더니, 그냥 매일매일 얼음 녹이고, 검사하고 하는게 제일 효율적인건가보다.
+
 ## My code
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm> // max
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <string.h> // memset
+using namespace std;
+
+int r, c;
+char arr[1500][1501];
+int visited[1500][1501];
+int visited2[1500][1501];
+vector<pair<int, int>> swan;
+
+int dx[4] = {0, 1, -1, 0};
+int dy[4] = {1, 0, 0, -1};
+
+void bfs(int sx, int sy){
+    queue<tuple<int, int, int>> q;
+    q.push(make_tuple(sx, sy, 0));
+    visited[sx][sy] = 0;
+
+    while(!q.empty()){
+        int x = get<0>(q.front());
+        int y = get<1>(q.front());
+        int dis = get<2>(q.front());
+        q.pop();
+
+        for(int i = 0; i < 4; i++){
+            int nx = x + dx[i];
+            int ny = y + dy[i];
+            if(nx < 0 || nx >= r || ny < 0 || ny >= c){
+                continue;
+            }
+
+            if(arr[nx][ny] == 'X' && (visited[nx][ny] == -1 || visited[nx][ny] > dis + 1)){
+                visited[nx][ny] = dis + 1;
+                q.push(make_tuple(nx, ny, dis+1));
+            }
+
+            if(arr[nx][ny] == '.' && dis == 0 && visited[nx][ny] == -1){
+                visited[nx][ny] = 0;
+                q.push(make_tuple(nx, ny, dis));
+            }
+        }
+
+    }
+
+}
+
+int meet(){
+//    int result = 0; // 0까지만 가능
+    deque<tuple<int, int, int>> q;
+    q.push_front(make_tuple(swan[0].first, swan[0].second, 0));
+    visited2[swan[0].first][swan[0].second] = 1;
+
+    while(!q.empty()){
+        int x = get<0>(q.front());
+        int y = get<1>(q.front());
+        int dis = get<2>(q.front());
+        q.pop_front();
+
+        if(x == swan[1].first && y == swan[1].second){
+            return dis;
+        }
+
+        for(int i = 0; i < 4; i++) {
+            int nx = x + dx[i];
+            int ny = y + dy[i];
+            if (nx < 0 || nx >= r || ny < 0 || ny >= c || visited2[nx][ny]) {
+                continue;
+            }
+
+            if(visited[nx][ny] == dis+1){
+                visited2[nx][ny] = 1;
+                q.push_back(make_tuple(nx, ny, dis+1));
+                continue;
+            }
+
+            if(visited[nx][ny] <= dis){
+                q.push_front(make_tuple(nx, ny, dis));
+                visited2[nx][ny] = 1;
+            }
+        }
+    }
+
+    return 0;
+}
+
+vector<pair<int, int>> water;
+
+int main() {
+    cin >> r >> c;
+
+    for(int i = 0; i < r; i++){
+        cin >> arr[i];
+        for(int j = 0; j < c; j++){
+            if(arr[i][j] == 'L'){
+                swan.push_back({i, j});
+                arr[i][j] = '.';
+            }
+            if(arr[i][j] == '.'){
+                water.push_back({i, j});
+            }
+        }
+    }
+
+    memset(visited, -1, sizeof(visited));
+
+    for(int i = 0; i < water.size(); i++){
+        if(visited[water[i].first][water[i].second] == -1){
+            bfs(water[i].first, water[i].second);
+        }
+    }
+
+    int result = meet();
+    cout << result << "\n";
+
+
+//    for(int i = 0; i < r; i++){
+//        for(int j = 0; j < c; j++){
+//            cout << visited[i][j] << " ";
+//        }
+//        cout << "\n";
+//    }
+
+    return 0;
+}
+
+```
