--- a/week10/49.md
+++ b/week10/49.md
@@ -6,6 +6,217 @@
 
 ## Question Summary
 
+57m49s67
+
 ## My solution summary
 
+염병.... 맞아버렸다... 드디어...
+
+- 거울을 기준으로 난리를 쳐야한다. 근데 문제가 좀 한국어가 이상하다.
+
+- 처음에 거울의 위치를 `vector<pair<int, int>> door`에 넣는다.
+
+```c++
+for(int i = 0; i < n; i++){
+    cin >> arr[i];
+    for(int j = 0; j < n; j++){
+        if(arr[i][j] == '#'){
+            door.push_back({i, j});
+        }
+    }
+}
+```
+
+- 그러고 나서 bfs()를 돌린다.
+
+```c++
+cout << bfs() << "\n";
+```
+
+- 내 bfs는 이렇게 생겼다.
+
+  - 우선 deque를 사용한다: 이동방향이 필요한건 다음에 어디를 체크할지 기록하기위해서이다
+    `c++ // x, y, 이동방향, 거울 수 deque<tuple<int, int, int, int>> q; `
+
+  - 거울을 설치하는 위치에서 90도 회전할건지(거울을 설치하는 것), 아니면 그냥 거울 설치안할건지를 확인했다. 근데 문이 꼭 벽에있는게 아니고 벽도 항상 있는게 아니라 door의 시작에서도 상하좌우 어디로 갈수 있는지를 체크해줘야한다.
+
+    ```c++
+    for(int i = 0; i < 4; i++){
+        int x = sx + dx[i];
+        int y = sy + dy[i];
+        if(x < 0 || x >= n || y < 0 || y >= n){
+            continue;
+        }
+        if(arr[x][y] != '*'){
+            q.push_back(make_tuple(sx, sy, i, 0)); // 문에서 시작
+        }
+    }
+    ```
+
+  - queue를 돌때 x, y가 답이면 멈춘다
+
+    ```c++
+    while(!q.empty()){
+        int x = get<0>(q.front());
+        int y = get<1>(q.front());
+        int move = get<2>(q.front()); // 이거 방향대로 이동한다.
+        int accMirror = get<3>(q.front()); // 지금까지 거울의 수
+        q.pop_front();
+
+
+        if(x == door[1].first && y == door[1].second){
+            return accMirror; // 여기까지 올때 설치한 거울의 수
+        }
+
+    ```
+
+  - 핵심은 이부분이다.
+
+    - 이동하던 방향으로 한번 이동해본다. 그리고 얘가 벽이거나 범위를 벗어나면 멈춘다
+    - 거울을 둘수 있는 곳이고 한번도 방문을 안했으면 일단 방문했다고 표시한다. 여기서 거울을 설치 안하는 경우는 방향도 그대로고 거울 설치 갯수도 그대로다. 얘는 큐의 앞에 넣어준다. 왜냐하면 거울을 설치한 경우보다 항상 우선해서 검사를 해야해서.
+    - 거울을 둘수 있는곳에 거울을 둘때는 90도 방향 두개가 가능하고 거울 갯수는 증가한다. 이때 얘는 큐의 뒤에 넣는다. 왜냐하면 가중치가 증가했기 때문.
+    - 문이면 큐의 앞에 넣어준다. 그래서 다음에 큐에서 꺼낼때 바로 답이 나오도록 한다.
+
+    ```c++
+        int nx = x;
+        int ny = y;
+        while(true){
+            nx += dx[move];
+            ny += dy[move];
+
+            if(nx < 0 || nx >= n || ny < 0 || ny >= n || arr[nx][ny] == '*'){
+                break;
+            }
+
+            if(arr[nx][ny] == '!' && visited[nx][ny] == 0){
+                // 거울 위치인데 아직 방문안한 곳
+                visited[nx][ny] = 1;
+                // 거울을 설치 안할수도 있다.
+                q.push_front(make_tuple(nx, ny, move, accMirror)); // 이동방향도 그대로
+
+                // 거울을 설치하는 곳
+                // 90도 방향을 틀어서 큐에 넣어준다
+                q.push_back(make_tuple(nx, ny, turn[move][0], accMirror+1));
+                q.push_back(make_tuple(nx, ny, turn[move][1], accMirror+1));
+
+                break;
+            }
+
+            if(arr[nx][ny] == '#'){
+                q.push_front(make_tuple(nx, ny, move, accMirror)); // 이동방향도 그대로
+                break;
+            }
+        }
+    ```
+
 ## My code
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm> // max
+#include <queue>
+#include <map>
+#include <tuple>
+#include <deque>
+#include <string>
+#include <string.h> // memset
+using namespace std;
+
+int n;
+char arr[50][51];
+int visited[50][51];
+vector<pair<int, int>> door;
+
+int dx[4] = {-1, 0, 1, 0}; // 위, 오른쪽, 아래쪽, 왼쪽
+int dy[4] = {0, 1, 0, -1};
+int turn[4][2] = {
+        {1, 3},
+        {0, 2},
+        {3, 1},
+        {0, 2}
+}; // 0, 1, 2, 3방향에서 각각 90도 회전한 방향
+
+int bfs(){
+    int sx = door[0].first;
+    int sy = door[0].second;
+
+    // x, y, 이동방향, 거울 수
+    deque<tuple<int, int, int, int>> q;
+    // 상 하 좌우 다 체크
+    for(int i = 0; i < 4; i++){
+        int x = sx + dx[i];
+        int y = sy + dy[i];
+        if(x < 0 || x >= n || y < 0 || y >= n){
+            continue;
+        }
+        if(arr[x][y] != '*'){
+            q.push_back(make_tuple(sx, sy, i, 0)); // 문에서 시작
+        }
+    }
+
+    visited[sx][sy] = 1;
+
+    while(!q.empty()){
+        int x = get<0>(q.front());
+        int y = get<1>(q.front());
+        int move = get<2>(q.front()); // 이거 방향대로 이동한다.
+        int accMirror = get<3>(q.front()); // 지금까지 거울의 수
+        q.pop_front();
+
+//        cout << x << " " << y << " " << move << "\n";
+
+        if(x == door[1].first && y == door[1].second){
+            return accMirror; // 여기까지 올때 설치한 거울의 수
+        }
+
+        int nx = x;
+        int ny = y;
+        while(true){
+            nx += dx[move];
+            ny += dy[move];
+
+            if(nx < 0 || nx >= n || ny < 0 || ny >= n || arr[nx][ny] == '*'){
+                break;
+            }
+
+            if(arr[nx][ny] == '!' && visited[nx][ny] == 0){
+                // 거울 위치인데 아직 방문안한 곳
+                visited[nx][ny] = 1;
+                // 거울을 설치 안할수도 있다.
+                q.push_front(make_tuple(nx, ny, move, accMirror)); // 이동방향도 그대로
+
+                // 거울을 설치하는 곳
+                // 90도 방향을 틀어서 큐에 넣어준다
+                q.push_back(make_tuple(nx, ny, turn[move][0], accMirror+1));
+                q.push_back(make_tuple(nx, ny, turn[move][1], accMirror+1));
+
+                break;
+            }
+
+            if(arr[nx][ny] == '#'){
+                q.push_front(make_tuple(nx, ny, move, accMirror)); // 이동방향도 그대로
+                break;
+            }
+        }
+    }
+
+    return 0;
+}
+
+int main() {
+    cin >> n;
+    for(int i = 0; i < n; i++){
+        cin >> arr[i];
+        for(int j = 0; j < n; j++){
+            if(arr[i][j] == '#'){
+                door.push_back({i, j});
+            }
+        }
+    }
+
+    cout << bfs() << "\n";
+
+    return 0;
+}
+```
