너무 어려운 문제 풀지말고 프로그래머스로 문제를 좀 바꾸었다

--- a/week10/55.md
+++ b/week10/55.md
@@ -1,9 +1,3 @@
-# Link to Question
+# 카카오 문제를 풀기로 함
 
-플레이리스트: https://www.acmicpc.net/problem/12872
-
-## Question Summary
-
-## My solution summary
-
-## My code
+https://programmers.co.kr/learn/courses/30/lessons/72415
