--- a/week10/51.md
+++ b/week10/51.md
@@ -1,11 +1,3 @@
-# Link to Question
+# 카카오 문제를 풀기로 함
 
-38번 다시 풀기
-
-퇴사 2: https://www.acmicpc.net/problem/15486
-
-## Question Summary
-
-## My solution summary
-
-## My code
+https://programmers.co.kr/learn/courses/30/lessons/72413
