--- a/week10/54.md
+++ b/week10/54.md
@@ -1,11 +1,3 @@
-# Link to Question
+# 카카오 문제를 풀기로 함
 
-41번 다시 풀기
-
-출근 기록: https://www.acmicpc.net/problem/14238
-
-## Question Summary
-
-## My solution summary
-
-## My code
+https://programmers.co.kr/learn/courses/30/lessons/72414
