--- a/week10/56.md
+++ b/week10/56.md
@@ -1,9 +1,3 @@
-# Link to Question
+# 카카오 문제를 풀기로 함
 
-N-Rook 2: https://www.acmicpc.net/problem/1767
-
-## Question Summary
-
-## My solution summary
-
-## My code
+https://programmers.co.kr/learn/courses/30/lessons/72416
