--- a/week10/57.md
+++ b/week10/57.md
@@ -1,9 +1,3 @@
-# Link to Question
+# 카카오 문제를 풀기로 함
 
-사다리 게임: https://www.acmicpc.net/problem/2008
-
-## Question Summary
-
-## My solution summary
-
-## My code
+https://programmers.co.kr/learn/courses/30/lessons/60058
