--- a/week10/58.md
+++ b/week10/58.md
@@ -1,9 +1,3 @@
-# Link to Question
+# 카카오 문제를 풀기로 함
 
-시험 감독: https://www.acmicpc.net/problem/13458
-
-## Question Summary
-
-## My solution summary
-
-## My code
+https://programmers.co.kr/learn/courses/30/lessons/60057
